fix: trim html whitespaces in mat-error elements

--- a/src/app/shared/components/counter-input/counter-input.component.scss
+++ b/src/app/shared/components/counter-input/counter-input.component.scss
@@ -31,5 +31,6 @@
 .errors {
   font-size: 0.75rem; // 12px
   padding-bottom: 0.5rem; // 8px
+  text-align: center;
 }
 
